--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,7 @@
 [mypy]
 allow_redefinition = true
 check_untyped_defs = true
-ignore_missing_imports = true
+ignore_missing_imports = false
 incremental = true
 strict_optional = true
 show_traceback = true
@@ -11,7 +11,7 @@ warn_unused_configs = true
 warn_unreachable = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
-show_error_codes = false
+show_error_codes = true
 disable_error_code = empty-body
 force_uppercase_builtins = true
 force_union_syntax = true
