Add the django cte plugin for as manager custom querysets typing

--- a/mypy.ini
+++ b/mypy.ini
@@ -15,11 +15,15 @@ show_error_codes = true
 disable_error_code = empty-body
 force_uppercase_builtins = true
 force_union_syntax = true
-
+cache_dir = /dev/null
 
 
 plugins =
-    mypy_django_plugin.main
+    mypy_django_plugin.main,
+    mypy_django_cte_plugin.main,
 
 [mypy.plugins.django-stubs]
 django_settings_module = project.settings
+
+[mypy-examples.*]
+disable_error_code = var-annotated
